Add CRUD for Images and GameItems
